+ Added support for NULL/empty values in universal module 's Static behavior and in "Custom Offset" dynamic behavior, also improved layout and dependency hiding for Date filtering scope

--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -132,7 +132,7 @@ FLEXI_DATES_SCOPE="Date scope"
 FLEXI_BDATE="From (date)"
 
 ;Trad?
-FLEXI_BDATE_DESC="If you selected the static behaviour, choose the start date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the start offset : Use 'd' for days, 'm' for monthes and 'Y' for years. eg: -5 d (minus 5 days). NOTE: Don't forget the space beetween the number and the unit!!!"
+FLEXI_BDATE_DESC="If you selected the static behaviour, choose the start date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the start offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: -5 d (minus 5 days)"
 
 FLEXI_DATE_CREATED="Created"
 FLEXI_DATE_MODIFIED="Modified"
@@ -140,10 +140,10 @@ FLEXI_DATE_PUBLISH_UP="Publish Up"
 FLEXI_DATE_DATA="Date DATA <br><small>to use in comparison</small>"
 FLEXI_DATE_DATA_DESC="The listed items items will be compared used these date DATA. <br><br><b>NOTE</b>: These are used in both static behaviour and dynamic behaviours"
 FLEXI_EDATE="To (date)"
+FLEXI_EDATE_DESC="If you selected the static behaviour, choose the end date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the end offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: 3 d (plus 3 days)"
 
-;Trad?
-FLEXI_EDATE_DESC="If you selected the static behaviour, choose the end date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the end offset : Use 'd' for days, 'm' for monthes and 'Y' for years. eg: 3 d (plus 3 days). NOTE: Don't forget the space beetween the number and the unit!!!"
-
+FLEXI_NULL_EMPTY_DATES="Null / empty dates"
+FLEXI_NULL_EMPTY_DATES_DESC="Select to include/exclude date values that are empty or NULL"
 FLEXI_DATE_NEVER="Never"
 FLEXI_NEXT_DAY="Next day"
 FLEXI_NEXT_MONTH="Next month"
@@ -373,8 +373,8 @@ FLEXI_MOD_READ_MORE="Read more..."
 FLEXI_TREAT_BDATE_AS="FROM date is"
 FLEXI_TREAT_EDATE_AS="TO date is"
 FLEXI_TREAT_XDATE_AS_DESC="Select to enter below:<br>(a) <b>Date string:</b>  <br>e.g. (static) specific date : 2012-04-23 <br>e.g. (dynamic: custom offset) now minus 3 hours: -3 h <br><br>(b) <b>Date expression</b> <u>static only</u> <br>e.g. previous day 20:00 UTC: <br>ADDTIME( CAST(ADDDATE(CURDATE(), -1) AS DATETIME) , '0 20:00:00')<br><br>e.g. today 20:00 UTC:<br>ADDTIME( CAST(CURDATE() AS DATETIME),'0 20:00:00')"
-FLEXI_DATE_STRING="Date String: <i>specific date or custom offset</i>"
-FLEXI_DATE_EXPRESSION="Date Expression"
+FLEXI_SPECIFIC_DATE="Specific date"
+FLEXI_SQL_DATE_EXPRESSION="SQL date Expression"
 FLEXI_STATIC_DO_NOT_COMPARE_CURRENT_ITEM="Static: use above, ignore currently viewed item"
 FLEXI_STATIC_USE_SPECIFIC_DATES="Static: specific dates / date expressions"
 FLEXI_BEHAVIOUR_STATIC_DYNAMIC="Behaviour (**)"
