--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -298,6 +298,7 @@ FLEXI_THIS_FIELDTYPE_PROPERTIES="Field specific properties"
 FLEXI_SELECT_TYPES_CUSTOM_NOTES="Assign this field to content - types -, items of the selected types will display this field."
 FLEXI_SELECT_TYPES_CORE_NOTES="This is a - core - field, thus its assigned to all field types"
 FLEXI_CORE_FIELDS_CUSTOMIZATION="Use '%s_{typealias}' as 'name', to customize (override) the item form related parameters of the %s field for specific type. Open type configuration to find out the '{typealias}' e.g. use '%s_article' for the article content type \n\n Please note that \n - only the field parameters are used and not the field properties, \n - and that display parameters are not overriden, \n !! but make sure you set them because they may be used in the future"
+FLEXI_FIELD_CUSTOMIZE_PER_CONTENT_TYPE="To customize this field per content type create a '%s' field and name it: %s_typealias, e.g. use '%s_article' for the article content type"
 
 ; Tags screen
 FLEXI_ALL_TAGS="Select assignment"
