+ Added 1 more option: 'If empty' to the 'Hide in form' parameter, to hide a field that returns empty (no HTML for item form)

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1995,6 +1995,7 @@ FLEXI_FORM_HIDDEN_DESC="Enable to hide the field in the frontend and/or backend 
 FLEXI_FRONTEND="Frontend"
 FLEXI_BACKEND="Backend"
 FLEXI_BOTH="Both"
+FLEXI_IF_EMPTY="If empty"
 
 ; Frontend Form parameters (some of them)
 FLEXI_FORM_CONTAINER_CSS="Form Container CSS"
@@ -3176,6 +3177,7 @@ FLEXI_USE_IN_FIELD_GROUP_DESC="Enable to allow field to be part of field group, 
 FLEXI_FIELD_EDITING="Editing"
 FLEXI_FIELD_VIEWING="Viewing"
 FLEXI_FIELD_SEARCH_FILTERING="Search, filtering"
+FLEXI_IF_EMPTY="If empty"
 
 ; Navigation sidebar
 FLEXI_NAV_SD_CONTENT_EDITING="Content editing"
