^ Compacted field group parameters with multi-value parameters, adding better user instructions

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3172,6 +3172,9 @@ FLEXI_CUSTOM_MODULE_PER_ITEM_DESC="You can - try - to customize some module para
 ; Field groups
 FLEXI_USE_IN_FIELD_GROUP="Use field in a group"
 FLEXI_USE_IN_FIELD_GROUP_DESC="Enable to allow field to be part of field group, that is created via 'Field Group' field. NOTE: You should then select this field in ONLY ONE field group"
+FLEXI_USE_IN_FIELD_GROUP_INSTRUCTIONS="Please create a <b> field of type </b> 'Field Group' and <br/> -- select this field and other fields inside it <br/> -- optionally, enable multi-value inside it, and 1 value of this field will be used per group"
+FLEXI_PREFER_CHECKBOX_TO_MULVAL_RADIO="Checkbox based fields are a better choice, than using multi-value in a radio based fields"
+FLEXI_PREFER_SELMUL_TO_MULVAL_SEL="Selectmultiple field is a better choice, than using multi-value single field"
 
 ; Fields
 FLEXI_FIELD_EDITING="Editing"
