+ Added installation of new plugin account_via_submit. Also cleanups for field_types DB retrieval and drop-down selector

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3191,3 +3191,12 @@ FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
 FLEXI_FIELD_GROUPING="Field grouping"
+
+; types of fields
+FLEXI_SELECTION_FIELDS="Selection fields"
+FLEXI_SINGLE_PROP_FIELDS="Single property fields"
+FLEXI_MULTIPLE_PROP_FIELDS="Multi property fields"
+FLEXI_MEDIA_MINI_APPS_FIELDS="Media fields / Mini apps"
+FLEXI_ITEM_FORM_FIELDS="Item form"
+FLEXI_DISPLAY_MANAGEMENT_FIELDS="Frontend display management"
+FLEXI_ITEM_RELATION_FIELDS="Item relations fields"
