^ More complete support for cascading select, selectmultiple

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -780,6 +780,8 @@ FLEXI_FIELD_USE_BUTTONS="Use buttons"
 FLEXI_FIELD_BUTTONS="Buttons"
 FLEXI_FIELD_LINKS="Links"
 
+FLEXI_FIELD_ELEMENTS_CASCADABLE_DESC="Field elements. The syntax is the following:<br/> value1:<span />:label1:<span />:image1:<span />:valgrp%% &nbsp; value2:<span />:label2:<span />:image2:<span />:valgrp%% &nbsp;  ... <br/><br/><b>NOTE 1</b>: (images are only used by radio/checkbox image field types) and valgroup is used when cascading changes from a dependent field that has --valgrp-- as its value, please type the image value in the all cases if you want to add 'valgrp' <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
+FLEXI_FIELD_ELEMENTS_CASCADABLE="Field elements (cascadable)"
 FLEXI_FIELD_ELEMENTS_DESC="Field elements. The syntax is the following:<br/> value1:<span />:label1:<span />:image1%% &nbsp; value2:<span />:label2:<span />:image2%% &nbsp;  ... <br/><br/><b>NOTE 1</b>: (images are only applicable for the radio/checkbox image field types) <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
 FLEXI_FIELD_ELEMENTS="Field elements"
 FLEXI_FIELD_HEIGHT_DESC="HTML editor height"
