# Improved descriptions / configuration of CASCADED feature in select / selectmultiple fields, TODO: verify feature in field group, add language strings, and implement in radio(image), checkbox(image) fields too

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -780,8 +780,23 @@ FLEXI_FIELD_USE_BUTTONS="Use buttons"
 FLEXI_FIELD_BUTTONS="Buttons"
 FLEXI_FIELD_LINKS="Links"
 
-FLEXI_FIELD_ELEMENTS_CASCADABLE_DESC="Field elements. The syntax is the following:<br/> value1:<span />:label1:<span />:image1:<span />:valgrp%% &nbsp; value2:<span />:label2:<span />:image2:<span />:valgrp%% &nbsp;  ... <br/><br/><b>NOTE 1</b>: (images are only used by radio/checkbox image field types) and valgroup is used when cascading changes from a dependent field that has --valgrp-- as its value, please type the image value in the all cases if you want to add 'valgrp' <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
-FLEXI_FIELD_ELEMENTS_CASCADABLE="Field elements (cascadable)"
+FLEXI_FIELD_ELEMENTS_CASCADABLE_DESC="
+<br/> SQL:
+<br/> &nbsp;  SELECT ... AS value, ... AS text, ... AS image, ... AS valgrp ...
+
+<br/>
+<br/> Element list:
+<br/> &nbsp; value1:<span />:label1:<span />:image1:<span />:valgrp%%
+<br/> &nbsp; value2:<span />:label2:<span />:image2:<span />:valgrp%% ...
+
+<br/>
+<br/> <b>NOTE 1</b>: <br/>
+- images are only used by radio/checkbox image field types <br/>
+- 'valgrp' is used when cascading changes = value of a master field<br/>
+- when adding 'valgrp', then enter 'image' too, e.g. noimage.png <br/>
+
+<br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
+FLEXI_FIELD_ELEMENTS_CASCADABLE="Field elements"
 FLEXI_FIELD_ELEMENTS_DESC="Field elements. The syntax is the following:<br/> value1:<span />:label1:<span />:image1%% &nbsp; value2:<span />:label2:<span />:image2%% &nbsp;  ... <br/><br/><b>NOTE 1</b>: (images are only applicable for the radio/checkbox image field types) <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
 FLEXI_FIELD_ELEMENTS="Field elements"
 FLEXI_FIELD_HEIGHT_DESC="HTML editor height"
@@ -852,7 +867,7 @@ FLEXI_SPACE="Space"
 FLEXI_REMOVE_SPACE="Remove space"
 FLEXI_REMOVE_SPACE_DESC="Remove the space between prefix value and suffix. It's recommended for plugin use, for example {play}mysong.mp3{/play}"
 FLEXI_FIELD_SQL_MODE="Use SQL query"
-FLEXI_FIELD_SQL_MODE_DESC="This mode allows you to build the list dynamically with SQL queries. If you select this mode, put you query in the field elements. It must return a text and a value, for example SELECT id AS value, name AS text from #__users . You can put replacement of item data like: {item->created_by} {item->catid} etc and field replacement like: {field->id} etc and for language (in frontend) like: {curr_userlang_shorttag} {curr_userlang_fulltag}"
+FLEXI_FIELD_SQL_MODE_DESC="This mode allows you to build the list dynamically with SQL queries. If you select this mode, put your query in the field elements. It must return COLUMNs: 'value', 'text' and optionaly 'image' and 'valgrp', for example: <br/><br/> &nbsp; SELECT id AS value, name AS text <br/> &nbsp; FROM #__users <br/><br/>NOTE, you can put replacements like: <br/><br/> &nbsp; Item data: {item->created_by} {item->catid} <br/> &nbsp; Field data: {field->id} <br/>  &nbsp; Language: {curr_userlang_shorttag} {curr_userlang_fulltag}"
 FLEXI_FIELD_VOTE_DIMENSION="Dimension"
 FLEXI_FIELD_VOTE_DIMENSION_DESC="Dimension of the image in px. Important: this size is the size of a single image. The real size of a 25px image would be height:75px width:25px"
 FLEXI_FIELD_VOTE_IMAGE="Image"
@@ -2339,7 +2354,7 @@ FLEXI_FILE_ITEM_ASSIGNMENTS_LEGEND_TIP="Icons showing file usage (item assigment
 
 ; SQL mode for indexable field with image
 FLEXI_FIELD_SQL_MODE_WITH_IMAGE="Use SQL query"
-FLEXI_FIELD_SQL_MODE_WITH_IMAGE_DESC="This mode allows you to build the list dynamically with SQL queries. If you select this mode, put you query in the field elements. It must return a text and a value, for example SELECT id AS value, name AS text, filename as image from #__users . You can put replacement of item data like: {item->created_by} {item->catid} etc and field replacement like: {field->id} etc and for language (in frontend) like: {curr_userlang_shorttag} {curr_userlang_fulltag}"
+FLEXI_FIELD_SQL_MODE_WITH_IMAGE_DESC="This mode allows you to build the list dynamically with SQL queries. If you select this mode, put your query in the field elements. It must return a text and a value, for example SELECT id AS value, name AS text, filename as image from #__users . You can put replacement of item data like: {item->created_by} {item->catid} etc and field replacement like: {field->id} etc and for language (in frontend) like: {curr_userlang_shorttag} {curr_userlang_fulltag}"
 
 ; Mobile handling feature
 FLEXI_CHOOSE_SPECIFIC_MOBILE_LAYOUT_DESC="Set a layout to be used when it is detected that current visitor is browsing from a mobile device and also have resolution below the configured minimum, by default the - normal - template is used"
