+ Added support for cascading radio, radioimage, checkbox, checkboximage fields, but this work is not 100% finished

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -218,6 +218,7 @@ FLEXI_SUBSCRIBERS="subscribers"
 ; Item screen (added beta4)
 FLEXI_FIELD_INVALID_QUERY="Either the query is not valid or it doesn't return any rows"
 FLEXI_FIELD_INVALID_ELEMENTS="There was an error while parsing element values set in field configuration"
+FLEXI_FIELD_NO_DATA_FOUND="No data found"
 PARAMALTREADMORE="Enter the text that you want to appear alongside the dynamic <em>Read more:</em> link instead of the default setting of using the Article Title."
 PARAMKEYREF="A text key by which an Article may be referenced (e.g. a help reference)"
 FLEXI_NOTHING_TO_RESTORE="Nothing to restore"
@@ -2522,6 +2523,10 @@ FLEXI_FIELDS_LIST_OR_HTML_WITH_REPLACEMENTS_DESC="Enter a comma separated field-
 FLEXI_FIELD="Field"
 
 ; some new common strings for fields configuration
+FLEXI_FIELD_ADD_PROMPT="Add prompt"
+FLEXI_FIELD_ADD_PROMPT_DESC="Enable to add a text to e.g. prompting user to select"
+FLEXI_FIELD_PROMPT_TEXT="Prompt Text <br/><small>(e.g. Select)</small>"
+FLEXI_FIELD_PROMPT_TEXT_DESC="Custom prompt text <br/><br/><b>NOTE</b>: This text is language-filtered so you can enter a language replacable string"
 FLEXI_FIELD_ADD_FIRST_OPTION="Add a default Option"
 FLEXI_FIELD_ADD_FIRST_OPTION_DESC="Enable to add a default first option to the Drop-Down Select"
 FLEXI_FIELD_FIRST_OPTION_TEXT="Default Option Text <br/><small>(e.g. Select Color)</small>"
