# Fixed can not trash/archive categories

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -535,6 +535,8 @@ FLEXI_CATEGORY_SAVED="Category saved"
 FLEXI_ERROR_SAVING_CATEGORY="Error saving category"
 FLEXI_CATEGORY_PUBLISHED="category(ies) published"
 FLEXI_CATEGORY_UNPUBLISHED="category(ies) unpublished"
+FLEXI_CATEGORIES_ARCHIVED="category(ies) archived"
+FLEXI_CATEGORIES_TRASHED="category(ies) trashed"
 FLEXI_ITEM_ASSIGNED_CATEGORY="You cannot delete category: %s. There are still items associated."
 FLEXI_ITEMS_ASSIGNED_CATEGORY="You cannot delete categories: %s. There are still items associated."
 
