# Fixed/tested cascading support for fields: checkbox, checkboximage, radioimage. In field configuation form, allowed changing field type without loosing values of common parameters. Started work on exporting / importing field configuration

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -811,6 +811,8 @@ FLEXI_FIELD_IMAGEDIR_DESC="Radio/Checkbox image directory"
 FLEXI_FIELD_IMAGEDIR="Radio/Checkbox image directory"
 FLEXI_FIELD_MAX_VALUES_DESC="The max number of values you wish to record"
 FLEXI_FIELD_MAX_VALUES="max # values"
+FLEXI_FIELD_MAX_OPTIONS_DESC="The max number of options that can be selected in each value of the field"
+FLEXI_FIELD_MAX_OPTIONS="max # options"
 FLEXI_FIELD_MAX_ALLOWED_VALUES_REACHED="You have reached the maximum allowed values of "
 FLEXI_FIELD_MIME_ICON_DESC="Add a mime icon before the filename."
 FLEXI_FIELD_MIME_ICON="Use mime icon"
@@ -2236,10 +2238,15 @@ FLEXI_INDEX_VALUE_ID="Value ID <br/><small>(for indexable values)</small>"
 FLEXI_COPY_WITH_VALUES="Copy with values"
 FLEXI_FILTER="Filter"
 
+FLEXI_FIELD_OPTIONS_PER_VALUE="Options per value"
 FLEXI_FIELD_MIN_VALUES_DESC="The min number of values you wish to record"
 FLEXI_FIELD_MIN_VALUES="min # values"
+FLEXI_FIELD_MIN_OPTIONS_DESC="The min number of options that must be selected in each value of the field"
+FLEXI_FIELD_MIN_OPTIONS="min # options"
 FLEXI_FIELD_EXACT_VALUES_DESC="The exact number of values you wish to record"
 FLEXI_FIELD_EXACT_VALUES="exact # values"
+FLEXI_FIELD_EXACT_OPTIONS_DESC="The exact number of options that must be selected in each value of the field"
+FLEXI_FIELD_EXACT_OPTIONS="exact # options"
 FLEXI_FIELD_JS_POPUP_ERROR_DESC="Display popup error message about the number of values selected, enable this and test the messages, e.g. this is useful for drop-down selects but not recommended for checkboxes"
 FLEXI_FIELD_JS_POPUP_ERROR="Popup Error messages"
 FLEXI_FIELD_NUM_VALUES_BETWEEN="# of values must be within limits: [%s, %s]"
