--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -665,6 +665,8 @@ FLEXI_SELECT_A_CATEGORY="Select a Category"
 FLEXI_SELECT_A_SECTION_DESC="Select the content section you wish to use for FLEXIcontent. You can either use an existing section or create a new one."
 FLEXI_SELECT_A_SECTION="Select a section"
 FLEXI_SHOW="Show"
+FLEXI_LINK_TO_FE="Link to frontend"
+FLEXI_LINK_TO_BE="Link to backend"
 FLEXI_SHOW_WITH_LABEL="Show with label"
 FLEXI_SHOW_FEED_DESC="Select if you want to show only the Introtext or the full text of your Item within the generated Feed."
 FLEXI_SHOW_FEED="For each feed item show"
@@ -2162,8 +2164,8 @@ FLEXI_NO_CONTACT_INFORMATION="No Contact details linked to this author"
 FLEXI_MANAGE_IN_CONTACT_COMPONENT="To set contant details for current author, navigate to Components &rArr;Contacts"
 FLEXI_TOO_MANY_ITEM_CATEGORIES="Too many categories selected. You are allowed (including main category) a maximum number of "
 
-FLEXI_ITEM_PARAM_OVERRIDE_ORDER_DETAILS="\n<span style='font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for item view is:<br/>\n<ul>\n<li>Component</li>\n<li>Menu</li>\n<li>Category</li>\n<li>Content Type</li>\n<li>Item</li>\n</ul>\n"
-FLEXI_CAT_PARAM_OVERRIDE_ORDER_DETAILS_INHERIT="\n<span style='font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for category view is:<br/>\n<ul>\n<li>Component</li>\n<li>Inherit from <small><sup>(1)</sup></small></li>\n<li>Category</li>\n<li>Author <small><sup>(2)</sup></small></li>\n<li>Menu <small><sup>(3)</sup></small></li></ul>\n <small><sup>(1)</sup></small> If <b>Inherit parameters from</b> is enabled<br/>\n <small><sup>(2)</sup></small> If category parameter override is enabled in author configuration<br/>\n <small><sup>(3)</sup></small> If category parameter override is enabled in the category menu<br/>\n"
+FLEXI_ITEM_PARAM_OVERRIDE_ORDER_DETAILS="\n<span style='font-weight:bold;'>NOTE: parameter VALUES that are neither --empty-- nor --Use Global--, will override the previously set VALUES</span><br/>\n<br/>Full <b>overriding order</b> for item view is:<br/>\n<ul>\n<li>Component</li>\n<li>Menu</li>\n<li>Category</li>\n<li>Content Type</li>\n<li>Item</li>\n</ul>\n"
+FLEXI_CAT_PARAM_OVERRIDE_ORDER_DETAILS_INHERIT="\n<span style='font-weight:bold;'>NOTE: parameter VALUES that are neither --empty-- nor --Use Global--, will override the previously set VALUES</span><br/>\n<br/>Full <b>overriding order</b> for category view is:<br/>\n<ul>\n<li>Component</li>\n<li>Inherit from <small><sup>(1)</sup></small></li>\n<li>Category</li>\n<li>Author <small><sup>(2)</sup></small></li>\n<li>Menu <small><sup>(3)</sup></small></li></ul>\n <small><sup>(1)</sup></small> If <b>Inherit parameters from</b> is enabled<br/>\n <small><sup>(2)</sup></small> If category parameter override is enabled in author configuration<br/>\n <small><sup>(3)</sup></small> If category parameter override is enabled in the category menu<br/>\n"
 
 FLEXI_ALLOW_DISABLING_COMMENTS="Allow disabling comments"
 FLEXI_ALLOW_DISABLING_COMMENTS_DESC="Here you can give the ability to authors/editors to disable comments on Content Items they can edit. If you allow this it is recommended not to show item advanced parameters"
