--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -471,8 +471,8 @@ FLEXI_UPGRADE_PHP_VERSION_GE="FLEXIcontent is only <span style='color:red; font-
 FLEXI_INSTALL_SUCCESSFUL="%s successful : %d additional queries executed."
 FLEXI_CONFIGURATION_NOT_SAVED="Please open and save %s.  Then <a href='index.php?option=com_flexicontent' style='color:red;'>REFRESH</a> and this message will disapear :-)."
 FLEXI_NO_SECTION_CHOOSEN="Please select a com_content section!!!<br />Either <a rel="_QQ_"{handler: 'iframe', size: {x: 400, y: 300}}"_QQ_" href='index.php?option=com_flexicontent&amp;layout=import&amp;tmpl=component' class='modal' style='color: red;'>IMPORT</a> and copy all Joomla!'s com_content structure<br />OR<br />Open the <a rel="_QQ_"{handler: 'iframe', size: {x: 570, y: 550}}"_QQ_" href='index.php?option=com_config&amp;controller=component&amp;component=com_flexicontent&amp;path=' class='modal' style='color: red;'>CONFIGURATION</a> panel and select a section with the first dropdown. Then <a href='index.php?option=com_flexicontent' style='color: red;'>REFRESH</a> and this message will disapear ;-)"
-FLEXI_NO_TYPES_CREATED="You didn't finish the install properly!!! Please click <a href='index.php?option=com_flexicontent&task=finishinstall&action=newinstall' style='color: red;'>HERE</a> to solve this issue ;-)"
-FLEXI_NO_CATEGORIES_CREATED="Please create at least one category to start using the application. Click <a href='index.php?option=com_flexicontent&view=category' style='color: red;'>HERE</a> to proceed."
+FLEXI_NO_TYPES_CREATED="You didn't finish the install properly!!! Please click <a href='index.php?option=com_flexicontent&amp;task=finishinstall&amp;action=newinstall' style='color: red;'>HERE</a> to solve this issue ;-)"
+FLEXI_NO_CATEGORIES_CREATED="Please create at least one category to start using the application. Click <a href='index.php?option=com_flexicontent&amp;view=category' style='color: red;'>HERE</a> to proceed."
 FLEXI_OPERATION_FAILED="Operation failed"
 FLEXI_SQL_ERROR="SQL error"
 FLEXI_SQL_NOT_FOUND="SQL file not found."
@@ -2386,7 +2386,7 @@ FLEXI_DEBUG_MOBILE="Debug detection & status"
 FLEXI_DEBUG_MOBILE_DESC="This will print detection or existing status messages in regards to mobile detection and usage"
 
 FLEXI_MOBILE_RES_LIMIT_DESKTOP_LAYOUT="Resolution limit for desktop layouts"
-FLEXI_MOBILE_RES_LIMIT_DESKTOP_LAYOUT_DESC="This is useful to exclude high resolution tablets from using the mobile layout, since they have both a large screen and a large resolution thus more capable in displaying desktop layouts that feature a basic responcive design"
+FLEXI_MOBILE_RES_LIMIT_DESKTOP_LAYOUT_DESC="This is useful to exclude high resolution tablets from using the mobile layout, since they have both a large screen and a large resolution thus more capable in displaying desktop layouts that feature a basic responsive design"
 FLEXI_MOBILE_RES_MINWIDTH="Minimum width"
 FLEXI_MOBILE_RES_MINWIDTH_DESC="Minimum width for using desktop layout"
 FLEXI_MOBILE_RES_MINHEIGHT="Minimum height"
@@ -2510,7 +2510,7 @@ FLEXI_INDEX_BASIC_CONTENT_LISTS="Re-Index Basic <br/><small>(Content Lists)</sma
 FLEXI_INDEX_ADVANCED_SEARCH_VIEW="Re-Index Advanced <br/><small>(Search View)</small>"
 FLEXI_INDEX_ADVANCED_SEARCH_VIEW_DIRTY_ONLY="Re-Index Advanced<br/><small>(Search View: dirty only)</small>"
 FLEXI_INDEX_ADVANCED_PURGE="Purge Advanced Index"
-FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the -BASIC- Search Index once !!!"
+FLEXI_ALERT_UPDATE_BASIC_INDEX="- %s - field(s) have a 'dirty' property: <small>(Content Lists 'Text Search')</small> . Please recalculate the <a rel="_QQ_"{handler: 'iframe', size: {x: 500, y: 240}}"_QQ_" href='index.php?option=com_flexicontent&amp;view=search&amp;layout=indexer&amp;tmpl=component&amp;indexer=basic' class='modal'>-BASIC- Search Index</a> once !!!"
 FLEXI_ALERT_UPDATE_ADVANCED_INDEX="- %s - field(s) have a 'dirty' property: <small>(Search View 'Text Searchable OR Filterable')</small> . Please recalculate the -ADVANCED- Search Index once !!!"
 ;
 FLEXI_CLICK_TO_TOGGLE="click to toggle"
