+ Implemented serialzed FORM submittion to detect and circumevent max_input_vars limitation in component, modules, category, item forms. Also added fast save-apply button to category/item forms, which submits form via AJAX without form reloading, this will retrieve and displays system messages properly

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1193,6 +1193,7 @@ FLEXI_REVERT_TO_THIS_VERSION="Load version #%s"
 FLEXI_CONFIRM_VERSION_RESTORE="Are you sure you wish to load this version?"
 
 ; Added 1.5.1 stable
+FLEXI_FAST_SAVE="Fast save"
 FLEXI_SAVE_AND_NEW="Save & new"
 FLEXI_DELETE_TAG="Please click here to delete this tag."
 FLEXI_OVERRIDE_PAGETTITLE="Override &lt;&zwnj;title&zwnj;&gt;"
@@ -1751,6 +1752,7 @@ FLEXI_MENU_ALLOW_LANG_MODS_DESC="Allow user to change the language related prope
 FLEXI_MODIFY_ITEMLANG="Item language"
 FLEXI_MODIFY_ORIGINAL_CONTENT_ASSOC="Original translated content"
 
+FLEXI_FAST_APPLY="Fast apply"
 FLEXI_APPLY="Apply"
 FLEXI_NON_NATIVE_TRANSLATIONS="NON native Item Translations (Translate CORE fields only) <br/> <small>A 3rd party tool, Joom!Fish (J1.5) / Falang (J2.5/J3.0+) will translate my content items (articles)</small>"
 FLEXI_MENU_EDIT_JOOMFISH_TRANSLATIONS="Edit Joom!Fish Translations"
