+ Added codemirror editor usage when edit layout files in layout form (templates manager)

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -456,6 +456,10 @@ FLEXI_TEMPLATE_PROPERTIES="Template properties"
 FLEXI_TEMPLATE_THUMBNAIL="Template thumbnail"
 FLEXI_WEBSITE="Website"
 FLEXI_TEMPLATE_DELETE_CONFIRM="TAKE CARE!!! You are about to delete a template folder. All the files inside will be permanently deleted!"
+FLEXI_FIELDS_PLACEMENT="Fields placement"
+
+FLEXI_EDIT_LAYOUT_FILES="Edit files - HTML / PHP / CSS / etc"
+FLEXI_NO_FILE_LOADED="No file loaded"
 
 ; System messages ##################################
 
@@ -2948,6 +2952,8 @@ FLEXI_FILTER_VALUES_REQUIRE_ALL_TIP_DESC="Select to show information if ANY or A
 FLEXI_ALPHANUMERIC="Alphanumeric"
 FLEXI_INTEGER="Integer"
 FLEXI_FLOAT="Float"
+FLEXI_LOADING="Loading"
+FLEXI_SAVING="Saving"
 
 ; Content Markups in Content Lists and Content View
 FLEXI_MARKUPS="Markups"
