+ Further improvements for template layout file editting, added better messaging and also a download (backup) file button

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -458,8 +458,9 @@ FLEXI_WEBSITE="Website"
 FLEXI_TEMPLATE_DELETE_CONFIRM="TAKE CARE!!! You are about to delete a template folder. All the files inside will be permanently deleted!"
 FLEXI_FIELDS_PLACEMENT="Fields placement"
 
-FLEXI_EDIT_LAYOUT_FILES="Edit files - HTML / PHP / CSS / etc"
+FLEXI_EDIT_LAYOUT_FILES="Edit files"
 FLEXI_NO_FILE_LOADED="No file loaded"
+FLEXI_LAYOUT_FILES="Layout files"
 
 ; System messages ##################################
 
