# Added option to turn off language filter of format string in created, modified and date fields, default for custom date format string is now OFF

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3183,6 +3183,8 @@ FLEXI_LANG_FILTER_LABELS="Language filter labels"
 FLEXI_LANG_FILTER_LABELS_DESC="Apply language filter JText::_() on the labels, the labels must be language strings, either added in a language file, or added by Joomla language overrides manager"
 FLEXI_LANG_FILTER_VALUES="Language filter values"
 FLEXI_LANG_FILTER_VALUES_DESC="Apply language filter JText::_() on the values, the values must be language strings, either added in a language file, or added by Joomla language overrides manager"
+FLEXI_LANG_FILTER_FORMAT_DESC="Apply language filter JText::_() on the format string which must be a language string, either added in a language file, or added by Joomla language overrides manager. <br/> <b>WARNING</b>: You need to disable language filtering if not adding language string! otherwise some characters will be stripped out like comma"
+FLEXI_LANG_FILTER_FORMAT="Language filter format"
 
 ; Inaccessible fields
 FLEXI_FIELD_SHOW_NOACCESS="Show no access message"
