# Fixed wrong comment count when item is assigned to multiple categories and counting unpublished comments

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3156,6 +3156,7 @@ FLEXI_POPUP="Popup"
 FLEXI_INLINE="Inline"
 FLEXI_REQUIRED="Required"
 FLEXI_RECOMMENDED="Recommended"
+FLEXI_ALLOW="Allow"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 
@@ -3235,7 +3236,7 @@ FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
 FLEXI_FIELD_GROUPING="Field grouping"
 
-; types of fields
+; Types of fields
 FLEXI_SELECTION_FIELDS="Selection fields"
 FLEXI_SINGLE_PROP_FIELDS="Single property fields"
 FLEXI_MULTIPLE_PROP_FIELDS="Multi property fields"
@@ -3243,3 +3244,12 @@ FLEXI_MEDIA_MINI_APPS_FIELDS="Media fields / Mini apps"
 FLEXI_ITEM_FORM_FIELDS="Item form"
 FLEXI_DISPLAY_MANAGEMENT_FIELDS="Frontend display management"
 FLEXI_ITEM_RELATION_FIELDS="Item relations fields"
+
+; Experimental params
+FLEXI_EXPERIMENTAL="Experimental"
+FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting reportis by end users or testers if they work. <br/><br/>NOTE: we do support these directly, and if they cause problems then they WILL BE DISABLED in future versions"
+
+; Allow Joomla article view
+FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
+FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>This will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view"
+FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
