--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -461,6 +461,15 @@ FLEXI_FIELDS_PLACEMENT="Fields placement"
 FLEXI_EDIT_LAYOUT_FILES="Edit files"
 FLEXI_NO_FILE_LOADED="No file loaded"
 FLEXI_LAYOUT_FILES="Layout files"
+FLEXI_COPY_CODE="Clic on wanted value and drah and drop in textarea or use copy (Ctrl+C) and past in wanted place (Ctrl+v)"
+FLEXI_XML_POSITION="Xml position"
+FLEXI_ITEM_POSITION="Item php position"
+FLEXI_CATEGORIE_POSITION="Categorie php position"
+FLEXI_ITEM_FIELD="Item php field"
+FLEXI_CATEGORIE_FIELD="Categorie php field"
+
+
+
 
 ; System messages ##################################
 
