^ More helpful UI for template file editting, adding explanations for each file, and per some file code insertion buttons

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -461,15 +461,13 @@ FLEXI_FIELDS_PLACEMENT="Fields placement"
 FLEXI_EDIT_LAYOUT_FILES="Edit files"
 FLEXI_NO_FILE_LOADED="No file loaded"
 FLEXI_LAYOUT_FILES="Layout files"
-FLEXI_COPY_CODE="Clic on wanted value and drah and drop in textarea or use copy (Ctrl+C) and past in wanted place (Ctrl+v)"
-FLEXI_XML_POSITION="Xml position"
-FLEXI_ITEM_POSITION="Item php position"
-FLEXI_CATEGORIE_POSITION="Categorie php position"
-FLEXI_ITEM_FIELD="Item php field"
-FLEXI_CATEGORIE_FIELD="Categorie php field"
-
-
-
+FLEXI_COPY_CODE="Please copy (Ctrl+C) and paste (Ctrl+V), at the desired place inside your template file"
+FLEXI_ADD_FIELD_POSITION_XML="New position for displaying fields"
+FLEXI_ADD_PARAMETER_TEXT_XML="New parameter: Text"
+FLEXI_ADD_PARAMETER_RADIO_XML="New parameter: Radio"
+FLEXI_ADD_PARAMETER_SELECT_XML="New parameter: Select"
+FLEXI_ADD_FIELD_POSITION_PHP="Display all fields of a position"
+FLEXI_ADD_FIELD_DISPLAY="Display a field of 'renderonly' position"
 
 ; System messages ##################################
 
