^ Allowed by default (initial) installation the "Article" content type to be viewable via Joomla article view, and also added column for this parameter in types manager with click to toggle capability. The change is to allow smoother initial experience on existing web-sites as by default frontend views will be unchanged (the Joomla category view was already allowed) and now the Joomla article view is allowed by default for the "Article" content type

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -225,6 +225,8 @@ FLEXI_NOTHING_TO_RESTORE="Nothing to restore"
 FLEXI_VERSION_RESTORED="Version %d has been restored"
 
 ; Types screen
+FLEXI_TYPE_DEFAULT_TEMPLATE="Default item layout (template)"
+FLEXI_TYPE_DEFAULT_TEMPLATE_DESC="This is the default item layout (template name) that will be used in item view to show the items of this type. <br/><br/>The <b>item layout</b> effects how the item is viewed since it defines the displayed fields, some layout spesific display parameters and contains a custom set of HTML/PHP & CSS/JS files"
 FLEXI_VIEW_FIELDS="view fields"
 FLEXI_VIEW_ITEMS="view items"
 ; Types screen (added beta4)
@@ -3164,6 +3166,8 @@ FLEXI_INLINE="Inline"
 FLEXI_REQUIRED="Required"
 FLEXI_RECOMMENDED="Recommended"
 FLEXI_ALLOW="Allow"
+FLEXI_ALLOWED="Allowed"
+FLEXI_REDIRECTED="Redirected"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 
@@ -3258,5 +3262,5 @@ FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting
 
 ; Allow Joomla article view
 FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
-FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>This will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view"
+FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>If redirection is disabled, then it will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view, thus e.g. article links in Joomla category view will not be redirected <br/><br/>  NOTE: (compatibility) this is by default allowed for 'article' Content <b>type</b>, but you can allow other types too"
 FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
