--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -139,7 +139,7 @@ FLEXI_NOCHANGE_LANGUAGE_DESC="Do not change change the language of the copied it
 FLEXI_DO_NOT_CHANGE="Do not change"
 FLEXI_FLAG="Flag"
 FLEXI_BIND="Bind"
-FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. <br/>This process may consume a lot of server resources depending on the number and the size of your contents. <br/>-- To avoid timeouts use a reasonable value according to your server capacity and the number of items to bind."
+FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. <br/>This process may take some time if you have a lot of content e.g. >2000 or > 10000 articles <br/>-- To avoid timeouts use a reasonable value according to your server capacity and the number of items to bind."
 FLEXI_BIND_FAILED="All/some items were not successfully bound."
 FLEXI_BIND_SUCCESSFUL="These items were successfully bound to their extended data."
 FLEXI_ITEMS_TO_BIND="items to bind"
