^ Completed fix in last commit and changes in regards to installation tasks, cleanups and new appearance and added language strings

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -139,7 +139,7 @@ FLEXI_NOCHANGE_LANGUAGE_DESC="Do not change change the language of the copied it
 FLEXI_DO_NOT_CHANGE="Do not change"
 FLEXI_FLAG="Flag"
 FLEXI_BIND="Bind"
-FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. <br/>This process may take some time if you have a lot of content e.g. >2000 or > 10000 articles <br/>-- To avoid timeouts use a reasonable value according to your server capacity and the number of items to bind."
+FLEXI_UNASSOCIATED_WARNING="The system has detected that some items are not yet bound to their extended data. <br/>This process may take some time if you have a lot of content e.g. >2000 or > 10000 articles <br/>To avoid timeouts use a reasonable value according to your server capacity and the number of items to bind."
 FLEXI_BIND_FAILED="All/some items were not successfully bound."
 FLEXI_BIND_SUCCESSFUL="These items were successfully bound to their extended data."
 FLEXI_ITEMS_TO_BIND="items to bind"
@@ -298,7 +298,7 @@ FLEXI_SCHEME_POSITIONS="Scheme of the positions"
 FLEXI_STANDARD_FIELDS_PROPERTIES="Field standard properties"
 FLEXI_TEMPLATE="Template"
 FLEXI_THIS_FIELDTYPE_PROPERTIES="Field specific properties"
-FLEXI_SELECT_TYPES_CUSTOM_NOTES="Assign this field to content - types -, items of the selected types will display this field."
+FLEXI_SELECT_TYPES_CUSTOM_NOTES="Assign this field to content - types -, items of the selected types will display this field in item form"
 FLEXI_SELECT_TYPES_CORE_NOTES="This is a - core - field, thus its assigned to all field types"
 FLEXI_CORE_FIELDS_CUSTOMIZATION="Use '%s_{typealias}' as 'name', to customize (override) the item form related parameters of the %s field for specific type. Open type configuration to find out the '{typealias}' e.g. use '%s_article' for the article content type \n\n Please note that \n - only the field parameters are used and not the field properties, \n - and that display parameters are not overriden, \n !! but make sure you set them because they may be used in the future"
 FLEXI_FIELD_CUSTOMIZE_PER_CONTENT_TYPE="To customize this field per content type create a '%s' field and name it: %s_typealias, e.g. use '%s_article' for the article content type"
