--- a/admin/language/en-GB/en-GB.com_flexicontent.sys.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.sys.ini
@@ -55,3 +55,27 @@ FLEXI_FILEMANAGER="Files"
 FLEXI_IMPORT="Import"
 FLEXI_STATISTICS="Statistics"
 FLEXI_CONFIG="Configuration"
+
+; Installation
+COM_FLEXICONTENT_DESCRIPTION="A flexible content management system for Joomla!"
+COM_FLEXICONTENT_INSTALLING="Installing"
+COM_FLEXICONTENT_UPDATING="Updating"
+COM_FLEXICONTENT_MIN="minimum"
+COM_FLEXICONTENT_REQUIRED_JVER="Required Joomla! version"
+COM_FLEXICONTENT_REQUIRED_PHPVER="Required PHP version"
+COM_FLEXICONTENT_VERSION="version"
+COM_FLEXICONTENT_FROM="from"
+COM_FLEXICONTENT_TO="to"
+COM_FLEXICONTENT_CURRENT="current"
+COM_FLEXICONTENT_DOWNGRADING="Downgrading"
+COM_FLEXICONTENT_RUNNING_INSTALLATION="Running installation"
+COM_FLEXICONTENT_UPDATING_INSTALLATION="Updating installation"
+
+COM_FLEXICONTENT_ADDITIONAL_EXTENSIONS="Additional Extensions"
+COM_FLEXICONTENT_EXTENSION="Extension"
+COM_FLEXICONTENT_TASKS="Tasks"
+COM_FLEXICONTENT_STATUS="Status"
+
+COM_FLEXICONTENT_INSTALLED="installed"
+COM_FLEXICONTENT_SKIPPED="skipped"
+COM_FLEXICONTENT_UNINSTALLED="uninstalled"
