Minor fixes, fixed fieldgroup item form inline tips, fixed small preview thumbs in items manager when viewed by chrome, fixed wrong language string for Search view default menu item being called 'tags menu item', fixed reporting wrong version number during installation when xmap plugin is installed

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1626,7 +1626,7 @@ FLEXI_FIELD_DESCRIPTION="Description"
 
 FLEXI_CHAINED_FILTERS="Dependent Filter Groups"
 FLEXI_CHAINED_FILTERS_DESC="Here you can define filters groups, with filters that are dependent to each other. Seperate filters with comma and groups with ## e.g. myfield5,myfield2,myfield8##myfield12,myfield4,myfield7"
-FLEXI_WARN_FIELD_NAME_CORRECTED="Your field name was invalid, it was changed from '%s' to be '%s'. First character must be a-z_ followed characters a-z_0-9"
+FLEXI_WARN_FIELD_NAME_CORRECTED="Your field name was invalid, it was changed from '%s' to be '%s'. First character must be a-zA-Z_ followed characters a-zA-Z_0-9"
 
 FLEXI_FIELD_DEFAULT_VALUE_USE="Default value use"
 FLEXI_FIELD_DEFAULT_VALUE_USE_DESC="Specify the cases that the default value will be used"
@@ -2321,7 +2321,7 @@ FLEXI_TAGS_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Tags View Def
 FLEXI_TAGS_DEFAULT_MENU_ITEMID_DESC="Tags links that do not originate from (a) a Tags Cloud module or (b) a Tag Menu Item, need to get a default configuration. <br/><br/>You can create a published Tag Menu Item of public access level (and set it here), and in this menu item configure the tags view default configuration to use for these tags links"
 FLEXI_FAVS_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Favourites View Default Configuration</small>"
 FLEXI_FAVS_DEFAULT_MENU_ITEMID_DESC="Favourites links that do not originate from (a) a Favourites Menu Item, need to get a default configuration. <br/><br/>You can create a published Favourites Menu Item of public access level (and set it here), and in this menu item configure the favourites view default configuration to use for these favourites links"
-FLEXI_SEARCH_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Tags View Default Configuration</small>"
+FLEXI_SEARCH_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Search View Default Configuration</small>"
 FLEXI_SEARCH_DEFAULT_MENU_ITEMID_DESC="Search links that do not originate from (a) a Search module or (b) a Search Menu Item, need to get a default configuration. <br/><br/>You can create a published Search Menu Item of public access level (and set it here), and in this menu item configure the search view default configuration to use for these search links"
 FLEXI_SELECT_MODULE="Select a Module"
 
