# Reenabled invalidating labels to depict required form fields, as some form fields are hidden and cannot be scrolled / focus, also fixed 'required' validation of image field inside the field group

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2129,6 +2129,7 @@ FLEXI_MEDIUM="Medium"
 FLEXI_LARGE="Large"
 FLEXI_ORIGINAL="Original"
 FLEXI_USER_CAN_SELECT="User can select"
+FLEXI_ALLOW_SELECTION="Allow selection"
 
 ; Enable/Disable vote counter
 FLEXI_FIELD_VOTE_SHOW_COUNTER="Show number of votes"
