--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -558,3 +558,6 @@ FLEXI_UMOD_EXPERT_FILTERING="Expert Filtering"
 FLEXI_UMOD_SET_METHOD_TO_ALL_TO_DISABLE="Set method to 'ALL' to disable"
 FLEXI_UMOD_STATIC_SET_TO_ALL_TO_DISABLE="Static, (set to 'ALL' to disable)"
 FLEXI_UMOD_DYNAMIC_SET_TO_STATIC_TO_DISABLE="Dynamic, (set to 'static' to disable)"
+
+FLEXI_UMOD_FIELDS_LIST_OR_HTML_WITH_REPLACEMENTS="Fields List <br/><small>or HTML with replacements</small>"
+FLEXI_UMOD_FIELDS_LIST_OR_HTML_WITH_REPLACEMENTS_DESC="Enter a comma separated field-name list or enter custom HTML with field and language string replacements: <br/><br/><b>NOTE:</b> you can use: <br/><br/> <b>{{fieldname}}</b> or <b>{{fieldname##displayvar}}</b> <br/> -- is replaced with HTML display of each field  <br/><br/> <b>{{fieldname##label}}</b> <br/> -- is replaced with label of each field <br/><br/><b>%%language_string%%</b><br/> -- is replaced with the language string <br/><br/>Finally, you can use item related replacements: __item_url__, __item_title_escaped__, __item_tooltip__ and item properties like: {item->id}, {item->title}, etc"
